# power-framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.ua.md  SECURITY.md  WHY_POWER_3.2.1.en.md  WHY_POWER_3.2.1.md  bench_223.py  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml
.agent/skills/cleanup-branches/: SKILL.md
.agent/skills/holistic-analysis/: SKILL.md
.agents/: AGENTS.md  INSTRUCTIONS.md
.agents/agents/create-new-agents/: agent.md
.agents/agents/opencode/: agent.md
.agents/mcp_servers/: power_server.py
.agents/scripts/: ir_benchmark.py  ir_benchmark_realvault.py  power_crosslingual_eval.py  power_search_eval.py
.agents/skills/cleanup-branches/: SKILL.md
.agents/skills/cleanup-branches/scripts/: cleanup_branches.py
.agents/skills/holistic-analysis/: SKILL.md
.agents/skills/power/: SKILL.md
.agents/skills/power/scripts/: generate_index.py  lint_brain.py
.github/: FUNDING.yml  dependabot.yml  release-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
benchmarks/power31/configs/: candidate.yaml
benchmarks/power31/scripts/: generate_benchmark.py
benchmarks/power31/scripts/evaluation/: run_release_evaluation.py  validate_dataset.py  verify_evidence.py
docs/: architecture.md  cli.md  contributing.md  getting-started.md  hierarchical-index-migration.md  hierarchical-index-migration.ua.md  index.md  mcp-server.md  migration-guide.md  migration-guide.ua.md  robots.txt
docs/adr/: 0001-power-3.1-trust-release-baseline.md
docs/api/: chunker.md  constants.md  embeddings.md  indexer.md  linter.md  models.md  parser.md  query_expansion.md  reranker.md  rot_scoring.md  searcher.md  utils.md
docs/plans/: 2026-07-14-power-framework-v2.md
docs/tests/: P.O.W.E.R.2.0.3-TEST-2.md  P.O.W.E.R.2.0.3-TEST-3.md  P.O.W.E.R.2.0.3-TEST-4.md  P.O.W.E.R.2.0.3-TEST.md  P.O.W.E.R.2.1.0-TEST.md  P.O.W.E.R.2.1.2-TEST-2.md  P.O.W.E.R.2.1.2-TEST.md  P.O.W.E.R.2.2.1-TEST.md  P.O.W.E.R.2.2.2-TEST-2.md  P.O.W.E.R.2.2.2-TEST.md  P.O.W.E.R.2.2.3-TEST.md  P.O.W.E.R.2.3.0-TEST.md  P.O.W.E.R.3.0.0-TEST.md
mcp_servers/: power_server.py
power_core/: __init__.py  cli.py  indexer.py  linter.py  models.py  parser.py  utils.py
scripts/: check_doc_drift.py  check_search_quality.py  cleanup_branches.py  sync-brain.sh
skills/power/: SKILL.md
skills/power/scripts/: generate_index.py  lint_brain.py
src/power_framework/: __init__.py
src/power_framework/core/: __init__.py  chunker.py  cli.py  colbert_reranker.py  constants.py  db.py  embeddings.py  healer.py  ignore.py  index_worker.py  indexer.py  linter.py  markdown_checks.py  models.py  parser.py  query_expansion.py  relations.py  reranker.py  rot_scoring.py  searcher.py  synthesize.py  utils.py
src/power_framework/core/metrics/: __init__.py  udcg.py
src/power_framework/mcp/: __init__.py  __main__.py  power_server.py
tests/: __init__.py  conftest.py  test_chunker.py  test_ci_policy.py  test_cli.py  test_embeddings.py  test_healer.py  test_indexer.py  test_integration.py  test_linter.py  test_low_ram_sync.py  test_mcp_server.py  test_memory_benchmarks.py  test_models.py  test_parser.py  test_perf_optimizations.py  test_performance_v3.py  test_query_expansion.py  test_relations.py  test_rename.py  test_reranker.py  test_retrieval_fixture.py  test_rot.py  test_rot_scoring.py  test_search_quality.py  test_searcher.py  test_security.py  test_semantic_rot.py  test_synthesize.py  test_typed_relations.py  test_udcg.py
tests/fixtures/: search_gt.json
