[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power-framework"
version = "1.4.0"
description = "AI-native toolkit for Obsidian knowledge bases — validate, index, and manage notes via CLI or MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Weby Homelab", email = "rekvizitor.ua@gmail.com" }
]
keywords = ["knowledge-management", "obsidian", "second-brain", "mcp", "ai-agents", "para", "okf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
power = "power_core.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/weby-homelab/P.O.W.E.R"
Documentation = "https://github.com/weby-homelab/P.O.W.E.R#readme"
Repository = "https://github.com/weby-homelab/P.O.W.E.R"
Issues = "https://github.com/weby-homelab/P.O.W.E.R/issues"

[tool.hatch.build.targets.wheel]
packages = ["power_core", "mcp_servers", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
