[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power-framework"
version = "2.1.0"
description = "AI-native toolkit for Second Brain knowledge bases — validate, index, and manage notes via CLI or MCP"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Weby Homelab", email = "rekvizitor.ua@gmail.com" }
]
keywords = ["knowledge-management", "second-brain", "mcp", "ai-agents", "para", "okf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "fastembed>=0.5.0,<1.0.0",
    "fastmcp>=3.2,<4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "pathspec>=0.12.0",
]

[project.scripts]
power = "power_framework.core.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/weby-homelab/power-framework"
Documentation = "https://github.com/weby-homelab/power-framework#readme"
Repository = "https://github.com/weby-homelab/power-framework"
Issues = "https://github.com/weby-homelab/power-framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/power_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=power_framework --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "S",
    "C4",
    "DTZ",
    "T20",
    "PT",
    "RUF",
    "PERF",
    "RET",
    "LOG",
    "FIX",
]
ignore = ["E501", "S101"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "power_framework.core.markdown_checks",
    "power_framework.core.rot_scoring",
    "power_framework.core.healer",
    "power_framework.core.indexer",
    "power_framework.core.parser",
]
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = [
    "power_framework.core.embeddings",
    "power_framework.core.searcher",
]
disable_error_code = [
    "import-not-found",
    "import-untyped",
    "no-untyped-def",
    "no-any-return",
    "attr-defined",
    "union-attr",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F405"]
"tests/*" = ["S101", "T20", "DTZ001"]
"scripts/*" = ["T20", "S310"]
"src/power_framework/core/cli.py" = ["T201"]
"src/power_framework/mcp/power_server.py" = ["S104"]
